WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260107
ASSERTION FAILED: isAllowedByContentSecurityPolicy(request.url(), ContentSecurityPolicy::RedirectResponseReceived::No) seen with multiple tests under http/wpt/workers/modules/
https://bugs.webkit.org/show_bug.cgi?id=260107
Summary
ASSERTION FAILED: isAllowedByContentSecurityPolicy(request.url(), ContentSecu...
Ben Schwartz
Reported
2023-08-11 16:42:28 PDT
http/wpt/workers/modules/dedicated-worker-import-csp.html This test is a constant failure on all platforms (debug builds). HISTORY:
https://results.webkit.org/?suite=layout-tests&test=http%2Fwpt%2Fworkers%2Fmodules%2Fdedicated-worker-import-csp.html
CRASH LOGS: Attached. CRASH LOG URLS:
https://build.webkit.org/results/Apple-Ventura-Debug-AppleSilicon-WK2-Tests/266817@main%20(3321)/http/wpt/workers/modules/dedicated-worker-import-csp-crash-log.txt
https://build.webkit.org/results/Apple-Ventura-Debug-WK1-Tests/266814@main%20(3200)/http/wpt/workers/modules/dedicated-worker-import-csp-crash-log.txt
https://build.webkit.org/results/Apple-Ventura-Debug-AppleSilicon-WK1-Tests/266824@main%20(3146)/http/wpt/workers/modules/dedicated-worker-import-csp-crash-log.txt
REPRODUCIBILITY: I was able to reproduce this issue on macOS Ventura Debug
266793@main
(latest successful debug build) using the following command: run-webkit-tests --verbose --debug http/wpt/workers/modules/dedicated-worker-import-csp.html REGRESSION: There is no clear regression as this is a WPT test imported at
266801@main
.
Attachments
wk1-ventura-arm64-debug-crash-log.txt
(4.47 KB, text/plain)
2023-08-11 16:43 PDT
,
Ben Schwartz
no flags
Details
wk1-ventura-x86_64-debug-crash-log.txt
(4.50 KB, text/plain)
2023-08-11 16:43 PDT
,
Ben Schwartz
no flags
Details
wk2-ventura-arm64-debug-crash-log.txt
(5.68 KB, text/plain)
2023-08-11 16:43 PDT
,
Ben Schwartz
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-11 16:42:38 PDT
<
rdar://problem/113777310
>
Ben Schwartz
Comment 2
2023-08-11 16:43:00 PDT
Created
attachment 467252
[details]
wk1-ventura-arm64-debug-crash-log.txt
Ben Schwartz
Comment 3
2023-08-11 16:43:20 PDT
Created
attachment 467253
[details]
wk1-ventura-x86_64-debug-crash-log.txt
Ben Schwartz
Comment 4
2023-08-11 16:43:40 PDT
Created
attachment 467254
[details]
wk2-ventura-arm64-debug-crash-log.txt
Ryan Haddad
Comment 5
2023-08-11 17:06:37 PDT
ASSERTION FAILED: isAllowedByContentSecurityPolicy(request.url(), ContentSecurityPolicy::RedirectResponseReceived::No) /Volumes/Data/worker/Apple-Ventura-Debug-Build/build/Source/WebCore/loader/DocumentThreadableLoader.cpp(148) : WebCore::DocumentThreadableLoader::DocumentThreadableLoader(WebCore::Document &, WebCore::ThreadableLoaderClient &, WebCore::DocumentThreadableLoader::BlockingBehavior, WebCore::ResourceRequest &&, const WebCore::ThreadableLoaderOptions &, RefPtr<WebCore::SecurityOrigin> &&, std::unique_ptr<ContentSecurityPolicy> &&, std::optional<CrossOriginEmbedderPolicy> &&, WTF::String &&, WebCore::DocumentThreadableLoader::ShouldLogError)
EWS
Comment 6
2023-08-11 17:24:58 PDT
Test gardening commit
266839@main
(ec6f02c2f324): <
https://commits.webkit.org/266839@main
> Reviewed commits have been landed. Closing PR #16631 and removing active labels.
Ben Schwartz
Comment 7
2023-08-11 17:25:14 PDT
Correction in original text: this test is a constant CRASH on all platforms (debug builds), not failure.
EWS
Comment 8
2023-08-11 18:03:43 PDT
Test gardening commit
266841@main
(a503aa72c296): <
https://commits.webkit.org/266841@main
> Reviewed commits have been landed. Closing PR #16634 and removing active labels.
Ben Schwartz
Comment 9
2023-08-11 18:06:02 PDT
I have marked this test to be skipped while this issue is investigated (PR link:
https://github.com/WebKit/WebKit/pull/16634
)
Fujii Hironori
Comment 10
2023-08-13 13:09:14 PDT
***
Bug 260128
has been marked as a duplicate of this bug. ***
Ben Schwartz
Comment 11
2023-08-14 14:57:25 PDT
Skipping additional test (http/wpt/workers/modules/dedicated-worker-import-csp.html) under the same bug while the issue is investigated. (PR link:
https://github.com/WebKit/WebKit/pull/16681
)
EWS
Comment 12
2023-08-14 15:03:16 PDT
Test gardening commit
266878@main
(2b25eede2b58): <
https://commits.webkit.org/266878@main
> Reviewed commits have been landed. Closing PR #16681 and removing active labels.
youenn fablet
Comment 13
2023-08-22 08:57:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16931
EWS
Comment 14
2023-08-23 10:03:36 PDT
Committed
267194@main
(0495446c22a5): <
https://commits.webkit.org/267194@main
> Reviewed commits have been landed. Closing PR #16931 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug