ASSERTION FAILED: isAllowedByContentSecurityPolicy(request.url(), ContentSecurityPolicy::RedirectResponseReceived::No) seen with multiple tests under http/wpt/workers/modules/ https://bugs.webkit.org/show_bug.cgi?id=260107 rdar://113777310

Reviewed by Chris Dumez.

CSP initial checks are done by each fetch client currently.
WorkerModuleScriptLoader needs to add the same checks as other clients.

* LayoutTests/http/wpt/workers/modules/dedicated-worker-import-csp-expected.txt:
* LayoutTests/http/wpt/workers/modules/shared-worker-import-csp-expected.txt:
* LayoutTests/platform/wk2/TestExpectations:
* Source/WebCore/bindings/js/WorkerModuleScriptLoader.cpp:
(WebCore::WorkerModuleScriptLoader::load):
* Source/WebCore/bindings/js/WorkerModuleScriptLoader.h:
* Source/WebKit/NetworkProcess/NetworkLoadChecker.cpp:
(WebKit::NetworkLoadChecker::isAllowedByContentSecurityPolicy):

Canonical link: https://commits.webkit.org/267194@main